Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/imagen1.jpg" />
                 Hyperblog
                 <span id="tagline">Tu blog maestro</span>
                 <span id="tagline">Tu blog de cabecera</span>
